clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__920726_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/920726-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[3] = ConstArray { ty: Array { element_type: Named("s8i"), size: 3 }, elts: Str("%d"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[5] = ConstArray { ty: Array { element_type: Named("s8i"), size: 5 }, elts: Str("i i "), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[6] = ConstArray { ty: Array { element_type: Named("s8i"), size: 6 }, elts: Str("5 20 "), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn sprintf(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn strlen(%arg0: s8i*) -> u64i [external, c, nothrow];
fn first(%arg2: s8i*, %arg3: s8i*, ...) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s8i*, %arg3: s8i*):
        %89 = alloca s8i*, "buf", align 8
        %90 = alloca s8i*, "fmt", align 8
        %91 = alloca s32i, "__retval", align 4
        %92 = alloca s32i, "pos", align 4
        %93 = alloca s32i, "number", align 4
        %94 = alloca rec___va_list_tag[1], "args", align 16
        %95 = alloca s32i, "dummy", align 4
        %96 = alloca s8i*, "bp", align 8
        store %arg2, %89
        store %arg3, %90
        %97 = load %89 : s8i*, align 8
        store %97, %96, align 8
        %98 = cast(array_to_ptrdecay) %94 : rec___va_list_tag*
        va_start
        scope {
                %104 = const 0 : s32i
                store %104, %92, align 4
                for cond {
                        %135 = load %92 : s32i, align 4
                        %136 = cast(integral) %135 : s64i
                        %137 = load %90 : s8i*, align 8
                        ptr_stride
                        %139 = load %138 : s8i, align 1
                        %140 = cast(int_to_bool) %139 : bool
                        condition %140
                } step {
                        %105 = load %92 : s32i, align 4
                        inc
                        store %106, %92, align 4
                        yield
                } body {
                        scope {
                                %107 = load %92 : s32i, align 4
                                %108 = cast(integral) %107 : s64i
                                %109 = load %90 : s8i*, align 8
                                ptr_stride
                                %111 = load %110 : s8i, align 1
                                %112 = cast(integral) %111 : s32i
                                %113 = const 105 : s32i
                                cmp
                                if %114 {
                                        %123 = cast(array_to_ptrdecay) %94 : rec___va_list_tag*
                                        va_arg
                                        store %124, %93, align 4
                                        %125 = get_global @sprintf : (s8i*, s8i*, ...) -> s32i*
                                        %126 = load %96 : s8i*, align 8
                                        %127 = get_global @.str : s8i[3]*
                                        %128 = cast(array_to_ptrdecay) %127 : s8i*
                                        %129 = load %93 : s32i, align 4
                                        %130 = call @sprintf(%126, %128, %129) : s32i [all]
                                        %131 = load %96 : s8i*, align 8
                                        %132 = call @strlen(%131) : u64i [all]
                                        %133 = load %96 : s8i*, align 8
                                        ptr_stride
                                        store %134, %96, align 8
                                        yield
                                } else {
                                        %115 = load %92 : s32i, align 4
                                        %116 = cast(integral) %115 : s64i
                                        %117 = load %90 : s8i*, align 8
                                        ptr_stride
                                        %119 = load %118 : s8i, align 1
                                        %120 = load %96 : s8i*, align 8
                                        %121 = const 1 : s32i
                                        ptr_stride
                                        store %122, %96, align 8
                                        store %119, %120, align 1
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %99 = cast(array_to_ptrdecay) %94 : rec___va_list_tag*
        va_end
        %100 = const 0 : s8i
        %101 = load %96 : s8i*, align 8
        store %100, %101, align 1
        %102 = load %95 : s32i, align 4
        store %102, %91
        %103 = load %91 : s32i
        return %103
}
fn second(%arg0: s8i*, %arg1: s8i*, ...) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i*, %arg1: s8i*):
        %36 = alloca rec_spurious, "coerce", align 4
        %37 = alloca s8i*, "buf", align 8
        %38 = alloca s8i*, "fmt", align 8
        %39 = alloca rec_spurious, "__retval", align 4
        %40 = alloca s32i, "pos", align 4
        %41 = alloca s32i, "number", align 4
        %42 = alloca rec___va_list_tag[1], "args", align 16
        %43 = alloca s8i*, "bp", align 8
        store %arg0, %37
        store %arg1, %38
        %44 = load %37 : s8i*, align 8
        store %44, %43, align 8
        %45 = cast(array_to_ptrdecay) %42 : rec___va_list_tag*
        va_start
        scope {
                %52 = const 0 : s32i
                store %52, %40, align 4
                for cond {
                        %83 = load %40 : s32i, align 4
                        %84 = cast(integral) %83 : s64i
                        %85 = load %38 : s8i*, align 8
                        ptr_stride
                        %87 = load %86 : s8i, align 1
                        %88 = cast(int_to_bool) %87 : bool
                        condition %88
                } step {
                        %53 = load %40 : s32i, align 4
                        inc
                        store %54, %40, align 4
                        yield
                } body {
                        scope {
                                %55 = load %40 : s32i, align 4
                                %56 = cast(integral) %55 : s64i
                                %57 = load %38 : s8i*, align 8
                                ptr_stride
                                %59 = load %58 : s8i, align 1
                                %60 = cast(integral) %59 : s32i
                                %61 = const 105 : s32i
                                cmp
                                if %62 {
                                        %71 = cast(array_to_ptrdecay) %42 : rec___va_list_tag*
                                        va_arg
                                        store %72, %41, align 4
                                        %73 = get_global @sprintf : (s8i*, s8i*, ...) -> s32i*
                                        %74 = load %43 : s8i*, align 8
                                        %75 = get_global @.str : s8i[3]*
                                        %76 = cast(array_to_ptrdecay) %75 : s8i*
                                        %77 = load %41 : s32i, align 4
                                        %78 = call @sprintf(%74, %76, %77) : s32i [all]
                                        %79 = load %43 : s8i*, align 8
                                        %80 = call @strlen(%79) : u64i [all]
                                        %81 = load %43 : s8i*, align 8
                                        ptr_stride
                                        store %82, %43, align 8
                                        yield
                                } else {
                                        %63 = load %40 : s32i, align 4
                                        %64 = cast(integral) %63 : s64i
                                        %65 = load %38 : s8i*, align 8
                                        ptr_stride
                                        %67 = load %66 : s8i, align 1
                                        %68 = load %43 : s8i*, align 8
                                        %69 = const 1 : s32i
                                        ptr_stride
                                        store %70, %43, align 8
                                        store %67, %68, align 1
                                        yield
                                }
                                yield
                        }
                        yield
                }
                yield
        }
        %46 = cast(array_to_ptrdecay) %42 : rec___va_list_tag*
        va_end
        %47 = const 0 : s8i
        %48 = load %43 : s8i*, align 8
        store %47, %48, align 1
        %49 = load %39 : rec_spurious
        store %49, %36
        %50 = cast(bitcast) %36 : s32i*
        %51 = load %50 : s32i
        return %51
}
fn strcmp(%arg0: s8i*, %arg1: s8i*) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "coerce", align 4
        %1 = alloca s32i, "__retval", align 4
        %2 = alloca s8i[100], "buf1", align 16
        %3 = alloca s8i[100], "buf2", align 16
        %4 = alloca rec_spurious, "agg.tmp0", align 4
        %5 = const 0 : s32i
        store %5, %1
        %6 = cast(array_to_ptrdecay) %2 : s8i*
        %7 = get_global @.str.1 : s8i[5]*
        %8 = cast(array_to_ptrdecay) %7 : s8i*
        %9 = const 5 : s32i
        %10 = const 20 : s32i
        %11 = call @first(%6, %8, %9, %10) : s32i [all]
        %12 = cast(array_to_ptrdecay) %3 : s8i*
        %13 = get_global @.str.1 : s8i[5]*
        %14 = cast(array_to_ptrdecay) %13 : s8i*
        %15 = const 5 : s32i
        %16 = const 20 : s32i
        %17 = call @second(%12, %14, %15, %16) : s32i [all]
        store %17, %0
        %18 = cast(bitcast) %0 : rec_spurious*
        %19 = load %18 : rec_spurious
        store %19, %4, align 4
        scope {
                %23 = get_global @.str.2 : s8i[6]*
                %24 = cast(array_to_ptrdecay) %23 : s8i*
                %25 = cast(array_to_ptrdecay) %2 : s8i*
                %26 = call @strcmp(%24, %25) : s32i [all]
                %27 = cast(int_to_bool) %26 : bool
                %28 = ternary %27 ? { : bool
                        %35 = const true : bool
                        yield %35
                } : {
                        %30 = get_global @.str.2 : s8i[6]*
                        %31 = cast(array_to_ptrdecay) %30 : s8i*
                        %32 = cast(array_to_ptrdecay) %3 : s8i*
                        %33 = call @strcmp(%31, %32) : s32i [all]
                        %34 = cast(int_to_bool) %33 : bool
                        yield %34
                }
                if %28 {
                        %29 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %20 = get_global @exit : (s32i) -> void*
        %21 = const 0 : s32i
        call @exit(%21) [all]
        %22 = load %1 : s32i
        return %22
}
