clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__920908_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/920908-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i, ...) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %26 = alloca rec_T, "coerce", align 4
        %27 = alloca s32i, "x", align 4
        %28 = alloca rec_T, "__retval", align 4
        %29 = alloca rec___va_list_tag[1], "ap", align 16
        %30 = alloca rec_T, "vaarg.tmp", align 4
        %31 = alloca rec_T, "vaarg.tmp", align 4
        store %arg0, %27
        %32 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_start
        %33 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_arg
        store %34, %30, align 4
        copy
        scope {
                get_member
                %47 = load %46 : s32i, align 4
                %48 = const 10 : s32i
                cmp
                if %49 {
                        %50 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %35 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_arg
        store %36, %31, align 4
        copy
        scope {
                get_member
                %42 = load %41 : s32i, align 4
                %43 = const 20 : s32i
                cmp
                if %44 {
                        %45 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %37 = cast(array_to_ptrdecay) %29 : rec___va_list_tag*
        va_end
        %38 = load %28 : rec_T
        store %38, %26
        %39 = cast(bitcast) %26 : s32i*
        %40 = load %39 : s32i
        return %40
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "coerce", align 4
        %1 = alloca rec_T, "coerce", align 4
        %2 = alloca rec_T, "coerce", align 4
        %3 = alloca s32i, "__retval", align 4
        %4 = alloca rec_T, "X", align 4
        %5 = alloca rec_T, "Y", align 4
        %6 = alloca s32i, "i", align 4
        %7 = alloca rec_T, "agg.tmp0", align 4
        %8 = const 0 : s32i
        store %8, %3
        %9 = const 10 : s32i
        get_member
        store %9, %10, align 4
        %11 = const 20 : s32i
        get_member
        store %11, %12, align 4
        %13 = const 2 : s32i
        %14 = load %4 : rec_T, align 4
        %15 = load %5 : rec_T, align 4
        store %14, %2
        %16 = cast(bitcast) %2 : s32i*
        %17 = load %16 : s32i
        store %15, %1
        %18 = cast(bitcast) %1 : s32i*
        %19 = load %18 : s32i
        %20 = call @f(%13, %17, %19) : s32i [all]
        store %20, %0
        %21 = cast(bitcast) %0 : rec_T*
        %22 = load %21 : rec_T
        store %22, %7, align 4
        %23 = get_global @exit : (s32i) -> void*
        %24 = const 0 : s32i
        call @exit(%24) [all]
        %25 = load %3 : s32i
        return %25
}
