clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__921019_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/921019-1.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[2] = ConstArray { ty: Array { element_type: Named("s8i"), size: 2 }, elts: Str("X"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global foo : void*[1] = ConstArray { ty: Array { element_type: Pointer { pointee: Named("void"), addr_space: None }, size: 1 }, elts: Array([GlobalView { ty: Pointer { pointee: Named("void"), addr_space: None }, symbol: ".str", indices: None }]), trailing_zeros_num: 0 } [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = const 0 : s64i
                %6 = const 0 : s64i
                %7 = get_global @foo : void*[1]*
                get_element
                %9 = load %8 : void*, align 8
                %10 = cast(bitcast) %9 : s8i*
                ptr_stride
                %12 = load %11 : s8i, align 1
                %13 = cast(integral) %12 : s32i
                %14 = const 88 : s32i
                cmp
                if %15 {
                        %16 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
