clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__921104_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/921104-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca u64i, "val", align 8
        %2 = const 0 : s32i
        store %2, %0
        %3 = const 1 : u64i
        store %3, %1, align 8
        scope {
                %7 = load %1 : u64i, align 8
                %8 = const 18446744073709551615 : u64i
                cmp
                if %9 {
                        %10 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %4 = get_global @exit : (s32i) -> void*
        %5 = const 0 : s32i
        call @exit(%5) [all]
        %6 = load %0 : s32i
        return %6
}
